--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.15.0",
     "url": "^0.11.0",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "webpack-dev-server": "^3.3.1"
   },
   "devDependencies": {
@@ -39,8 +40,10 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "node-sass": "^4.11.0",
     "open-iconic": "^1.1.1",
     "sass-loader": "^7.1.0",
+    "scss-loader": "^0.0.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.7.0",
